# GrowForever-Model

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
api/routers/: nodes.py
app/api/routers/: gpts.py  nodes.py  tests.py  users.py
app/main/: main.py
app/models/: node.py  user.py
app/utils/: lifespan.py
core/: config.py  database.py  neo4jConfig.py
helm/growforever-model/: values.yaml
helm/growforever-model/templates/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
main/: main.py
models/: base.py  edge.py  enums.py  node.py  session.py
routers/: expand.py  users.py
schemas/: edge_schema.py  node_schema.py
services/: gnn_service.py  gpt_service.py
utils/: lifespan.py
