[project]
name = "growforever-model"
version = "0.1.0"
description = "GrowForever 后端模型服务，融合图结构AI、GPT模型及心理结构解析功能"
authors = [
    {name = "iammm",email = "physicisthacker@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",

    # 数据库 & 配置
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "neo4j>=5.15",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2.1",

    # 机器学习 & 深度学习
    "torch>=2.2",  # PyTorch 最新版本支持 GNN + GPT 模型
    "torchvision>=0.17",  # 如果你需要图像模型训练
    "torchaudio>=2.2",  # 如果你有音频模型
    "scikit-learn>=1.4",  # ML经典算法支持
    "numpy>=1.26",
    "pandas>=2.2",

    # 图神经网络(GNN)
    "torch-geometric>=2.4",  # PyTorch Geometric: 主流GNN框架
    "torch-sparse>=0.6.18",  # GNN子模块依赖
    "torch-scatter>=2.1.2",

    # GPT & 生成模型
    "transformers>=4.39",  # HuggingFace Transformers
    "datasets>=2.18",      # 用于训练数据集管理
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"